--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-02 14:07+0100\n"
+"POT-Creation-Date: 2020-01-08 15:50+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -606,6 +606,9 @@ msgstr ""
 msgid "Person to add"
 msgstr ""
 
+msgid "Phone"
+msgstr ""
+
 msgid "Photo"
 msgstr ""
 
@@ -987,7 +990,7 @@ msgstr ""
 msgid "file"
 msgstr ""
 
-msgid "filter by education_group"
+msgid "filter by students"
 msgstr ""
 
 msgid "from"
@@ -1006,9 +1009,6 @@ msgid "no file"
 msgstr ""
 
 msgid "of"
-msgstr ""
-
-msgid "Phone"
 msgstr ""
 
 msgid "search_person_explanation"
