OSIS-7643 add missing trans

--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -146,6 +146,9 @@ msgstr "Cochez les programmes de cours en relation avec ce sujet"
 msgid "Co-Promotor"
 msgstr "Co-Promoteur"
 
+msgid "Cohorts management"
+msgstr "Gestion des cohortes"
+
 msgid "Collaboration"
 msgstr "Collaboration"
 
