--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -143,6 +143,9 @@ msgstr ""
 msgid "Check the programs related to this topic"
 msgstr ""
 
+msgid "Close"
+msgstr ""
+
 msgid "Co-Promotor"
 msgstr ""
 
@@ -707,9 +710,6 @@ msgstr ""
 msgid "Settings of the Dissertation application"
 msgstr ""
 
-msgid "Show _MENU_ entries"
-msgstr ""
-
 msgid "Showing 0 to 0 of 0 entries"
 msgstr ""
 
@@ -723,6 +723,9 @@ msgid "Start Program/Year"
 msgstr ""
 
 msgid "Stats"
+msgstr ""
+
+msgid "Status"
 msgstr ""
 
 msgctxt "dissertation"
